finish main layout

--- a/src/assets/stylesheet/scss/_variables.scss
+++ b/src/assets/stylesheet/scss/_variables.scss
@@ -1,6 +1,18 @@
+// color
 $blue-light: #4A90E2;
 $blue-dark: #00408B;
+$blue-btn-bg: #3982D7;
 $white: #ffffff;
+$white-btn-bg: #FDFDFD;
+$gray-placeholder: #C8C8C8;
+$gray-body-bg: #E1E1E1;
+$gray-card-bg: #F2F2F2;
+$gray-comment: #757575;
+$gray-lineThrough: #9B9B9B;
+$yellow-star: #F5A623;
+$yellow-important: #FFF2DC;
+$black: #000000;
+$red: #D0021B;
 
 $header-height: 76px;
 
