--- a/src/assets/stylesheet/scss/todolist.scss
+++ b/src/assets/stylesheet/scss/todolist.scss
@@ -2,3 +2,10 @@
 @import "navbar";
 @import "cards";
 @import "fonts";
+
+.taskCount {
+    font-family: 'Roboto-Itali', sans-serif;
+    font-size: 24px;
+    color: $gray-placeholder;
+    font-style: italic;
+}
